--- a/lib/YamlConfig/FCC-ee_FourLeptonProcessesIncludeHiggsLFV.yaml
+++ b/lib/YamlConfig/FCC-ee_FourLeptonProcessesIncludeHiggsLFV.yaml
@@ -12,12 +12,10 @@
       set run_card lpp1 0
       set run_card lpp2 0
       set run_card nevents 10000
-      set sde_strategy 1
-      set hard_survey 2
   Pythia:
     PythiaSwitch: False
     PythiaCard: ''
-  DelphesCardPath: "lib/YamlConfig/FCC-ee_FourLeptonProcessesIncludeHiggsLFV.yaml"
+  DelphesCardPath: "delphes_card_IDEA.tcl"
 
 - Run_name: "eeToZH_FourLeptons_HiggsLFV"
   Pythia:
@@ -27,7 +25,6 @@
       25:addChannel 1 0.1 100 13 -11  ! add another channel
       25:onIfAny 11 13                ! higgs will only decay either 11 or 13
       Main:numberOfEvents      = 10000
-      !HEPMCoutput:file         = tag_1_pythia8_events.hepmc
       SysCalc:fullCutVariation = off
       Beams:frameType=4
       HEPMCoutput:scaling=1.0000000000e+09
@@ -36,6 +33,21 @@
       JetMatching:setMad=off
       LHEFInputs:nSubruns=1
       Main:subrun=0
-      !Beams:LHEF=unweighted_events.lhe.gz
       
 - Run_name: "eeToZWW_FourLeptons"
+  madgraph:
+    gen_card: |
+      generate e+ e- > z w+ w-,w- > l- vl~, w+ > l+ vl, z > l+ l-
+      output eeToZWW_FourLeptons
+    run_card: |
+      launch eeToZWW_FourLeptons -n formal01
+      shower=Pythia8
+      set run_card nb_cores 10
+      set run_card ebeam1 120
+      set run_card ebeam2 120
+      set run_card lpp1 0
+      set run_card lpp2 0
+      set run_card nevents 10000
+  Pythia:
+    PythiaSwitch: False
+    PythiaCard: ''
