--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ lib/__pycache__/__init__.cpython-313.pyc
 lib/__pycache__/__init__.cpython-37.pyc
 lib/__pycache__/MadGraphPythiaDelphes_Chain.cpython-37.pyc
 .vscode/settings.json
+lib/importer.py
